# setuptts

./: .gitignore  BUILD.md  README.md  build_macos.sh  build_windows.bat  build_windows.ps1  main.py  pyproject.toml  requirements.txt  setuptts.spec  setuptts_portable.spec
.github/workflows/: build.yml
app/: __init__.py  main.py
app/assets/icons/: README.md  app.icns
app/assets/styles/: app.qss
app/config/: settings.py
app/models/: job.py  voice.py
app/services/: history_service.py  tts_quality.py  tts_service.py
app/ui/: main_window.py
app/ui/dialogs/: about_dialog.py  settings_dialog.py
app/ui/panels/: history_panel.py  input_panel.py  output_panel.py
app/utils/: app_logging.py  paths.py
app/workers/: chunk_store.py  job_queue.py  preview_worker.py  tts_worker.py  voice_loader.py
installers/: windows.iss
scripts/: entitlements.plist  generate_icons.py
tests/: conftest.py  test_chunk_store.py  test_job_queue.py  test_tts_quality.py  test_tts_worker.py
